# ai-nexus-cr-test

./: Cargo.toml  README.md  cli.py  index.html  new_file.txt  next.config.js  nextjs_config.txt  script.js  stack.py  strapi_config.txt  style.css  test_fibonacci.py  test_stack.py
.github/workflows/: coverage.yml  e2e_test_coverage.yml  new_workflow.yml  rust.yml  rust_tests.yml
backend/: .env  package.json
blog/templates/blog/: post_list.html
components/: BlogPost.js  BlogPost.tsx  PhotoGallery.js  PhotoGallery.tsx
css/: styles.css
frontend/: next.config.js  package.json
frontend/pages/: index.js
js/: script.js
nextjs/components/: BlogPost.tsx  Comment.tsx  CommentForm.tsx  PhotoGallery.tsx
nextjs/pages/: index.tsx
nextjs/pages/api/: graphql.ts
nextjs/styles/: globals.css
pages/: index.js  index.tsx
src/: fibonacci.rs  main.rs  stack.rs  test_fibonacci.rs
strapi/content-types/: blog-post.json  comment.json  photo-gallery.json
styles/: globals.css
tests/: e2e_test.py  test_stack.rs
tests/acceptance/: test_website_acceptance.py
tests/e2e/: test_website_e2e.py
utils/: strapi.ts
