package]
name = "code-agent-clap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive", "color", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tiny-tok = "0.11"
async-stream = "0.3"
tokio = { version = "1", features = ["full", "default"] }
futures = "0.3"
diff = "1.0"
rayon = "1.8"

[dev-dependencies]
test-case = "3.1"